# tayyib-invest

./: .gitignore  Makefile  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: codeql.yml  pylint.yml  pytest.yml
tayyib_invest/: app.py  config.py  vercel.json
tayyib_invest/backend/: app.py  config.py  requirements.txt
tayyib_invest/backend/company_info/: company.py  company_financials.py  search_company.py
tayyib_invest/backend/entities/: haram_activities.py  request.py
tayyib_invest/backend/llm/: analysis.py
tayyib_invest/backend/screener/: business_activity.py  financial_ratios.py  validate_halal.py
tayyib_invest/entities/: request.py
tayyib_invest/frontend/: streamlit_app.py
tayyib_invest/screener/: business_activity.py  business_sector.py  financial_ratios.py  validate_halal.py
tests/backend/: conftest.py
tests/backend/company_info/: test_company.py
tests/backend/screener/: test_business_activity.py  test_financial_ratios.py  test_validate_halal.py
