[tool.poetry]
name = "tayyib-invest"
version = "0.1.0"
description = "Tayyib Invest API is a FastAPI application designed for halal stock validation."
authors = ["Ademola Kunmi <salamiolokun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "!=3.9.7, ^3.9, <3.13"
python-dotenv = "^1.0.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.3"
httpx = "^0.28.1"
yfinance = "^0.2.50"
requests = "^2.32.3"
groq = "^0.13.1"
streamlit = "^1.41.1"
pylint = "^3.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"
pytest = "^8.3.4"
uvicorn = "^0.34.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"

[tool.mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
plugins = "pydantic.mypy"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["ANN", "ARG", "ASYNC", "E", "I", "N", "PL", "Q", "S", "TC", "UP", "W"]
ignore = ["E501", "ANN401", "PLR2004", "S104", "S101"]

[tool.ruff.lint.isort]
known-first-party = [ "tayyib_invest" ]
lines-after-imports = 2

[tool.pylint]
disable = ["C0114", "C0115", "C0116", "R0902"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
